--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,16 @@ body{
     color:white;
 
 }
+.header--secondary{
+    color:white;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.header--subheader{
+    font-size: 21px;
+    color: grey;
+}
 
 .link--cta{
     font-size: 16px;
